# AdventOfCode2023

./: .gitignore  .merlin  .ocamlformat  .ocamlinit  README.md  adc01.ml  adc01.py  adc01b.ml  adc01b.py  adc02.ml  adc02b.ml  adc03.py  dune-project
adc01/: README.md  adc01.ml  adc01b.ml  adc01b.py  dune
adc02/: README.md  adc02.ml  adc02.py  adc02b.ml  dune
adc03/: README.md  adc03.ml  dune
adc04/: README.md  adc04.ml  adc04.py  adc04b.ml  adc04b.py  dune
adc05/: README.md  adc05.ml  adc05b.ml  dune
adc06/: README.md  adc06.ml  adc06b.ml  adc06t.ml  dune
adc07/: README.md  adc07.ml  adc07.py  dune
adc08/: adc08.ml  dune
adc09/: adc09.ml  adc09.py  dune
adc10/: adc10.py
adc11/: adc11.ml  dune
adc12/: a.out  adc12.ml  adc12b.cmi  adc12b.cmx  adc12b.ml  adc12c.ml  adc12d.ml  adc12lld.py  dune
adc13/: adc13.py
adc14/: adc14.py  adc14b.py  adc14c.py
adc15/: adc15.ml  dune
adc16/: adc16.ml  dune
adc17/: adc17.ml  adc17.py  adc17b.ml  adc17c.ml  adc17d.ml  dune
adc18/: adc18.ml  dune
adc19/: adc19.ml  dune
adc20/: adc20.ml  adc20b.ml  dune
adc21/: README.md  adc21.ml  adc21.py  adc21b.ml  adc21b.py  adc21c.ml  dune  test21b.txt
adc22/: adc22.ml  dune
adc23/: README.md  adc23.ml  adc23b.ml  dune
adc24/: adc24.ml  adc24.py  dune
adc25/: adc25.ml  adc25b.ml  dune  input25.dot
